# django-gutgin-ui

./: README.md  pyproject.toml
gutginm/: apps.py  urls.py  views.py
gutginm/templates/: _base.html  generators.html
main/: .env.example  settings.py  urls.py
scripts/: run  startup
