[tool.poetry]
name = "django-gutgin-ui"
version = "0.0.1"
description = "Web wrap for gutgin toolkit"
authors = ["Kirill Lekhov <Kirill.Lekhov@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.10"
django-environ = "^0.9.0"
gutgin = {git = "https://github.com/Kirill-Lekhov/gutgin.git", rev = "develop"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
